Upgraded to Java 11. Added custom exceptions with handling. Updated tests accordingly.